ДЗ_5 Задание выполнено